--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import '@solana/wallet-adapter-react-ui/styles.css';
 
 body {
   font-family: Arial, Helvetica, sans-serif;
@@ -75,4 +76,5 @@ body {
   body {
     @apply bg-background text-foreground;
   }
-}
+} 
+ 
